Fix hamburger menu not staying visible on scroll

--- a/Design System/styles.css
+++ b/Design System/styles.css
@@ -322,9 +322,9 @@ input {
 }
 
 .menu-btn__burger {
-    position: absolute;
-    right: 0;
-    top: 0.5rem;
+    position: fixed;
+    right: 1rem;
+    top: 1.5rem;
     width: 28px;
     height: 3px;
     background: black;
